// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader renders 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders badge with type 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart1 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        >
                          <div
                            className="FlexItem"
                          >
                            <div
                              className="Badge middle warningBase"
                            >
                              <div
                                className="Flex rowGap1 columnGap1 xsDirectionRow xsItemsCenter"
                              >
                                <div
                                  className="FlexItem"
                                >
                                  <div
                                    className="box xsDisplayInlineBlock"
                                    style={
                                      Object {
                                        "marginTop": "2px",
                                      }
                                    }
                                  >
                                    Needs attention
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders primary action 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="FlexItem"
            >
              <div
                className="box mdDisplayBlock xsDisplayNone"
              >
                <div
                  className="Flex rowGap2 columnGap0 xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box xsDisplayFlex xsItemsCenter"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <button
                        className="button hideOutline inline accessibilityOutline parentButton"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          className="button hideOutline inline accessibilityOutline tapTransition lg red enabled childrenDiv"
                        >
                          <div
                            className="Text fontSize300 inverseText alignCenter fontWeightSemiBold"
                          >
                            Create
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box mdDisplayNone xsDisplayBlock"
              >
                <button
                  aria-controls="pageheader-dropdown"
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="test"
                  className="parentButton"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <div
                    className="button tapTransition enabled"
                  >
                    <div
                      className="pog transparent"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon defaultIcon iconBlock"
                        height={20}
                        role="img"
                        viewBox="0 0 24 24"
                        width={20}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders secondary action 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="FlexItem"
            >
              <div
                className="box mdDisplayBlock xsDisplayNone"
              >
                <div
                  className="Flex rowGap2 columnGap0 xsDirectionRow"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box xsDisplayFlex xsItemsCenter"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <a
                        className="link hideOutline tapTransition rounding0 block noUnderline hoverUnderline accessibilityOutline"
                        href="www.pinterest.com"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyPress={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        rel=""
                        target={null}
                      >
                        Help center
                      </a>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box xsDisplayFlex xsItemsCenter"
                      style={
                        Object {
                          "height": 48,
                        }
                      }
                    >
                      <button
                        className="button hideOutline inline accessibilityOutline parentButton"
                        disabled={false}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onMouseUp={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        type="button"
                      >
                        <div
                          className="button hideOutline inline accessibilityOutline tapTransition lg red enabled childrenDiv"
                        >
                          <div
                            className="Text fontSize300 inverseText alignCenter fontWeightSemiBold"
                          >
                            Create
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box mdDisplayNone xsDisplayBlock"
              >
                <button
                  aria-controls="pageheader-dropdown"
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="test"
                  className="parentButton"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <div
                    className="button tapTransition enabled"
                  >
                    <div
                      className="pog transparent"
                      style={
                        Object {
                          "height": 48,
                          "width": 48,
                        }
                      }
                    >
                      <svg
                        aria-hidden={true}
                        aria-label=""
                        className="icon defaultIcon iconBlock"
                        height={20}
                        role="img"
                        viewBox="0 0 24 24"
                        width={20}
                      >
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders subtext 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box smDisplayBlock xsDisplayNone"
                    >
                      <span
                        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                      >
                        5 followers
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageHeader renders within a max width 1`] = `
<div
  className="pageHeader"
>
  <div
    className="box default paddingX8 paddingY4"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="Flex rowGap0 columnGap0 flexGrow justifyCenter xsDirectionRow"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <div
        className="Flex rowGap0 columnGap0 flexGrow xsDirectionRow"
        style={
          Object {
            "maxWidth": "60%",
          }
        }
      >
        <div
          className="FlexItem flexGrow selfCenter"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="box marginEnd6"
          >
            <div
              className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap0 columnGap1 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                    >
                      <div
                        className="box smDisplayNone xsDisplayBlock"
                      >
                        <h1
                          className="Heading fontSize400 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box smDisplayBlock xsDisplayNone"
                      >
                        <h1
                          className="Heading fontSize500 defaultText alignStart breakWord lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 1,
                            }
                          }
                          title="Settings"
                        >
                          Settings
                        </h1>
                      </div>
                      <div
                        className="box marginStart3 smDisplayBlock xsDisplayNone"
                      >
                        <div
                          className="Flex rowGap3 columnGap0 xsDirectionRow"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="box smDisplayBlock xsDisplayNone"
                    >
                      <span
                        className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
                      >
                        5 followers
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexNone"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Flex rowGap8 columnGap0 xsDirectionRow xsItemsCenter"
            style={
              Object {
                "height": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
